@@ -1,6 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - You may now specify the protocol version using the protocol_version
+    attribute for AnyEvent::WebSocket::Client.  All protocol versions
+    supported by Protocol::WebSocket should work.
 
 0.35      2016-08-04 13:47:36 -0400
   - Production version functionally identical to the 0.34_01 release.
